# Kivo

./: CHANGELOG.md  LICENSE  README.md  package.json
.github/workflows/: tests.yml
desktop/: Cargo.toml  tauri.conf.json
desktop/src/: main.rs
desktop/src/http/: client.rs  client_tests.rs  dynamic_vars.rs  load_test.rs  load_test_tests.rs  models.rs
desktop/src/storage/: mod.rs  secrets.rs  tests.rs
desktop/src/storage/export/: mod.rs
desktop/src/storage/import/: mod.rs
desktop/src/storage/io/: mod.rs
desktop/src/storage/models/: mod.rs
src/: index.css
src/app/: App.jsx
src/components/ui/: EnvHighlightInput.jsx  button.jsx  input.jsx  textarea.jsx
src/components/workspace/: AppHeader.jsx  AppSettingsPage.jsx  CollectionRunner.jsx  CollectionSettingsPage.jsx  EnvEditor.jsx  HistorySettingsPanel.jsx  RequestDocsPanel.jsx  RequestPane.jsx  RequestTabs.jsx  ResponsePane.jsx  Sidebar.jsx  StreamResponsePanel.jsx  WorkspaceEnvironmentSelector.jsx
src/hooks/: use-env.js  use-workspace-environments.js  use-workspace-store.js
src/lib/: api-design.js  collection-runner.js  cookie-utils.js  history-utils.js  http-client.js  http-ui.js  oauth.js  request-script-snippets.js  request-scripts.js  script-sandbox.js  template-variables.js  workspace-store.js  workspace-utils.js
test/: api-design.test.mjs  collection-runner.test.mjs  history-utils.test.mjs  request-script-snippets.test.mjs  script-sandbox.test.mjs  workspace-utils.test.mjs
