[package]
name = "kivo"
version = "0.4.1"
description = "A minimal cross-platform HTTP client built with Rust and Tauri for fast and simple API testing."
authors = ["TrisH0x2A, Now part of DevlogZz"]
license = "MIT"
repository = "https://github.com/DevlogZz/Kivo"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
base64 = "0.22.1"
aes-gcm = "0.10"
chrono = { version = "0.4", features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "multipart", "gzip", "brotli", "deflate", "zstd"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
bytes = "1"
prost = "0.13"
prost-types = "0.13"
prost-reflect = { version = "0.14", features = ["serde"] }
pbkdf2 = "0.12"
protox = "0.7"
sha2 = "0.10"
hex = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2.2.5"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["transport"] }
tonic-reflection = "0.12"
httparse = "1.8"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pki-types = "1.7"
rustls-native-certs = "0.8"
url = "2.5"
num_cpus = "1.16"
tokio-util = { version = "0.7", features = ["rt"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake", "rustls-tls-native-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
rust_socketio = { version = "0.4", features = ["async"] }
uuid = { version = "1", features = ["v4"] }
rustls-pemfile = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
